# mcp-sdk-python

./: NOTICE  README.md  pyproject.toml
src/mcp_manifest/: __init__.py  discover.py  models.py  validate.py
