[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-manifest"
version = "0.1.0"
description = "Discover and parse MCP server manifests (mcp-manifest.dev)"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.10"
keywords = ["mcp", "manifest", "model-context-protocol", "autodiscovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://mcp-manifest.dev"
Repository = "https://git.marketally.com/mcp-manifest/sdk-python"
